Got createEncrypt() working in aaes.js

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 	<link type="text/css" rel="stylesheet" href="asmjs.css"/>
 	<script type="text/javascript" src="common.js"></script>
 	<script type="text/javascript" src="hex.js" defer="defer"></script>
-	<script type="text/javascript" src="aes.js" defer="defer"></script>
+	<script type="text/javascript" src="aaes.js" defer="defer"></script>
 	<script type="text/javascript">
 
 		/**
