Configurable keysize. No need for the Xtime2 table.

--- a/aes_constants.html
+++ b/aes_constants.html
@@ -75,8 +75,8 @@
 		var ISbox = Sbox + 256;
 		var Xtime2Sbox = ISbox + 256;
 		var Xtime3Sbox = Xtime2Sbox + 256;
-		var Xtime2 = Xtime3Sbox + 256;
-		var Xtime9 = Xtime2 + 256;
+		//var Xtime2 = Xtime3Sbox + 256;
+		var Xtime9 = Xtime3Sbox + 256;
 		var XtimeB = Xtime9 + 256;
 		var XtimeD = XtimeB + 256;
 		var XtimeE = XtimeD + 256;
@@ -203,7 +203,7 @@
 				{ "c": "// Load the ISbox lookup table", "p": ISbox, "a": ISboxa },
 				{ "c": "// Load the Xtime2Sbox lookup table", "p": Xtime2Sbox, "a": Xtime2Sboxa },
 				{ "c": "// Load the Xtime3Sbox lookup table", "p": Xtime3Sbox, "a": Xtime3Sboxa },
-				{ "c": "// Load the Xtime2 lookup table", "p": Xtime2, "a": Xtime2a },
+				//{ "c": "// Load the Xtime2 lookup table", "p": Xtime2, "a": Xtime2a },
 				{ "c": "// Load the Xtime9 lookup table", "p": Xtime9, "a": Xtime9a },
 				{ "c": "// Load the XtimeB lookup table", "p": XtimeB, "a": XtimeBa },
 				{ "c": "// Load the XtimeD lookup table", "p": XtimeD, "a": XtimeDa },
