--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 	<script type="text/javascript" src="common.js"></script>
 	<script type="text/javascript" src="hex.js" defer="defer"></script>
 	<script type="text/javascript" src="aes.js" defer="defer"></script>
+	<script type="text/javascript" src="main/sha.js" defer="defer"></script>
 	<script type="text/javascript">
 
 		/**
@@ -71,6 +72,24 @@
 				aes_plaintext.value = str;
 			};
 
+			var hash_form = document.getElementById("hash_form");
+			var hash_plaintext = document.getElementById("hash_plaintext");
+			var hash_submit = document.getElementById("hash_submit");
+			var hash_output = document.getElementById("hash_output");
+			var hash_plain_output = document.getElementById("hash_plain_output");
+
+			hash_form.onsubmit = function(event) {
+				event.preventDefault();
+
+				var hashB = hashString(hash_plaintext.value);
+				hash_output.innerHTML = hashB;
+			};
+			var i = 0xffffffff;
+			hash_plain_output.innerHTML = "i = " + i;
+			++i;
+			hash_plain_output.innerHTML += " ; ++i = " + i;
+			hash_plain_output.innerHTML += " ; 0x100000000 = " + 0x100000000;
+
 		});
 	</script>
 </head>
@@ -106,6 +125,19 @@
 	<div class="module_result">
 		<span id="aes_output" class="output"></span><br/>
 		<span id="aes_plain_output" class="output"></span>
+	</div>
+</div>
+
+<div class="module">
+	<div class="module_header">Hash</div>
+	<form id="hash_form" class="module_form">
+		<label for="hash_plaintext" class="module_label">Text:</label>
+		<textarea id="hash_plaintext" class="module_text">abc</textarea><br/>
+		<button id="hash_submit" type="submit" class="module_submit">Submit</button>
+	</form>
+	<div class="module_result">
+		<span id="hash_output" class="output"></span><br/>
+		<span id="hash_plain_output" class="output"></span>
 	</div>
 </div>
 
