--- a/src/index.html
+++ b/src/index.html
@@ -132,7 +132,7 @@
 	<div class="module_header">Hash</div>
 	<form id="hash_form" class="module_form">
 		<label for="hash_plaintext" class="module_label">Text:</label>
-		<textarea id="hash_plaintext" class="module_text">abc</textarea><br/>
+		<textarea id="hash_plaintext" class="module_text">abcdbcdecdefdefgefghfghighijhijkijkljklmklmnlmnomnopnopq</textarea><br/>
 		<button id="hash_submit" type="submit" class="module_submit">Submit</button>
 	</form>
 	<div class="module_result">
