--- a/aes_constants.html
+++ b/aes_constants.html
@@ -33,6 +33,8 @@
 		var XtimeEs = "0x00,0x0e,0x1c,0x12,0x38,0x36,0x24,0x2a,0x70,0x7e,0x6c,0x62,0x48,0x46,0x54,0x5a,0xe0,0xee,0xfc,0xf2,0xd8,0xd6,0xc4,0xca,0x90,0x9e,0x8c,0x82,0xa8,0xa6,0xb4,0xba,0xdb,0xd5,0xc7,0xc9,0xe3,0xed,0xff,0xf1,0xab,0xa5,0xb7,0xb9,0x93,0x9d,0x8f,0x81,0x3b,0x35,0x27,0x29,0x03,0x0d,0x1f,0x11,0x4b,0x45,0x57,0x59,0x73,0x7d,0x6f,0x61,0xad,0xa3,0xb1,0xbf,0x95,0x9b,0x89,0x87,0xdd,0xd3,0xc1,0xcf,0xe5,0xeb,0xf9,0xf7,0x4d,0x43,0x51,0x5f,0x75,0x7b,0x69,0x67,0x3d,0x33,0x21,0x2f,0x05,0x0b,0x19,0x17,0x76,0x78,0x6a,0x64,0x4e,0x40,0x52,0x5c,0x06,0x08,0x1a,0x14,0x3e,0x30,0x22,0x2c,0x96,0x98,0x8a,0x84,0xae,0xa0,0xb2,0xbc,0xe6,0xe8,0xfa,0xf4,0xde,0xd0,0xc2,0xcc,0x41,0x4f,0x5d,0x53,0x79,0x77,0x65,0x6b,0x31,0x3f,0x2d,0x23,0x09,0x07,0x15,0x1b,0xa1,0xaf,0xbd,0xb3,0x99,0x97,0x85,0x8b,0xd1,0xdf,0xcd,0xc3,0xe9,0xe7,0xf5,0xfb,0x9a,0x94,0x86,0x88,0xa2,0xac,0xbe,0xb0,0xea,0xe4,0xf6,0xf8,0xd2,0xdc,0xce,0xc0,0x7a,0x74,0x66,0x68,0x42,0x4c,0x5e,0x50,0x0a,0x04,0x16,0x18,0x32,0x3c,0x2e,0x20,0xec,0xe2,0xf0,0xfe,0xd4,0xda,0xc8,0xc6,0x9c,0x92,0x80,0x8e,0xa4,0xaa,0xb8,0xb6,0x0c,0x02,0x10,0x1e,0x34,0x3a,0x28,0x26,0x7c,0x72,0x60,0x6e,0x44,0x4a,0x58,0x56,0x37,0x39,0x2b,0x25,0x0f,0x01,0x13,0x1d,0x47,0x49,0x5b,0x55,0x7f,0x71,0x63,0x6d,0xd7,0xd9,0xcb,0xc5,0xef,0xe1,0xf3,0xfd,0xa7,0xa9,0xbb,0xb5,0x9f,0x91,0x83,0x8d";
 		var rcons = "0x00,0x01,0x02,0x04,0x08,0x10,0x20,0x40,0x80,0x1B,0x36";
 
+		var Ks = "0x428a2f98,0x71374491,0xb5c0fbcf,0xe9b5dba5,0x3956c25b,0x59f111f1,0x923f82a4,0xab1c5ed5,0xd807aa98,0x12835b01,0x243185be,0x550c7dc3,0x72be5d74,0x80deb1fe,0x9bdc06a7,0xc19bf174,0xe49b69c1,0xefbe4786,0x0fc19dc6,0x240ca1cc,0x2de92c6f,0x4a7484aa,0x5cb0a9dc,0x76f988da,0x983e5152,0xa831c66d,0xb00327c8,0xbf597fc7,0xc6e00bf3,0xd5a79147,0x06ca6351,0x14292967,0x27b70a85,0x2e1b2138,0x4d2c6dfc,0x53380d13,0x650a7354,0x766a0abb,0x81c2c92e,0x92722c85,0xa2bfe8a1,0xa81a664b,0xc24b8b70,0xc76c51a3,0xd192e819,0xd6990624,0xf40e3585,0x106aa070,0x19a4c116,0x1e376c08,0x2748774c,0x34b0bcb5,0x391c0cb3,0x4ed8aa4a,0x5b9cca4f,0x682e6ff3,0x748f82ee,0x78a5636f,0x84c87814,0x8cc70208,0x90befffa,0xa4506ceb,0xbef9a3f7,0xc67178f2";
+
 
 		function escapeHtml(str) {
 			return str.replace(/[&]/g, "&amp;").replace(/[<]/g, "&lt;");
@@ -59,6 +61,8 @@
 		var XtimeEa = XtimeEs.split(",");
 		var rcona = rcons.split(",");
 
+		var Ka = Ks.split(",");
+
 		var heap = new ArrayBuffer(16384);
 		var view32 = new Uint32Array(heap);
 		/*var Te0 = 0;
@@ -81,6 +85,8 @@
 		var XtimeD = XtimeB + 256;
 		var XtimeE = XtimeD + 256;
 		var rcon = XtimeE + 256;
+
+		var K = 0;
 
 		function asmInit(conf) {
 			var s = "";
@@ -169,6 +175,23 @@
 			document.getElementById("output").innerHTML = s;
 		}
 
+		function kInit(conf) {
+			var s = "";
+			for(var i = 0 ; i < conf.length ; i++) {
+				s += conf[i].c + "\n";
+				for(var j = 0 ; j < conf[i].a.length ; j++) {
+					s += "view32[" + (conf[i].p + j * 4) + ">>2]=" + conf[i].a[j] + ";";
+					if((j + 1) % 4 == 0) {
+						s += "\n";
+					} else {
+						s += " ";
+					}
+				}
+				s += "\n";
+			}
+			document.getElementById("output").innerHTML = s;
+		}
+
 		window.addEventListener("load", function() {
 			/*var asmConf = [
 				{ "c": "// Load the Te0 lookup table", "p": Te0, "a": Te0a },
@@ -198,7 +221,7 @@
 			];
 			//normInit(normConf);*/
 
-			var byteConf = [
+			/*var byteConf = [
 				{ "c": "// Load the Sbox lookup table", "p": Sbox, "a": Sboxa },
 				{ "c": "// Load the ISbox lookup table", "p": ISbox, "a": ISboxa },
 				{ "c": "// Load the Xtime2Sbox lookup table", "p": Xtime2Sbox, "a": Xtime2Sboxa },
@@ -210,7 +233,12 @@
 				{ "c": "// Load the XtimeE lookup table", "p": XtimeE, "a": XtimeEa },
 				{ "c": "// Load the rcon lookup table", "p": rcon, "a": rcona }
 			];
-			asmByteInit(byteConf);
+			asmByteInit(byteConf);*/
+
+			var kConf = [
+				{ "c": "// Load the K constants table.", "p": K, "a": Ka }
+			];
+			kInit(kConf);
 
 			/*console.time("init");
 			init();
