--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 	<script type="text/javascript" src="common.js"></script>
 	<script type="text/javascript" src="hex.js" defer="defer"></script>
 	<script type="text/javascript" src="aes.js" defer="defer"></script>
-	<script type="text/javascript" src="main/sha.js" defer="defer"></script>
+	<script type="text/javascript" src="main/sha.js" charset="UTF-8" defer="defer"></script>
 	<script type="text/javascript">
 
 		/**
