Updated files with the new js path.

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,9 @@
 	<title>asmjs</title>
 	<meta charset="UTF-8">
 	<link type="text/css" rel="stylesheet" href="asmjs.css"/>
-	<script type="text/javascript" src="common.js"></script>
-	<script type="text/javascript" src="hex.js" defer="defer"></script>
-	<script type="text/javascript" src="aes.js" defer="defer"></script>
+	<script type="text/javascript" src="main/common.js"></script>
+	<script type="text/javascript" src="main/hex.js" defer="defer"></script>
+	<script type="text/javascript" src="main/aes.js" defer="defer"></script>
 	<script type="text/javascript" src="main/sha.js" charset="UTF-8" defer="defer"></script>
 	<script type="text/javascript">
 
